Исправлены ошибки импортов.

--- a/tests/examples.ipynb
+++ b/tests/examples.ipynb
@@ -7,12 +7,12 @@
     "collapsed": true
    },
    "source": [
-    "from ..fetchers.FBS import FBSPostingList\n",
-    "from ..fetchers.FBO import FBOPostingList\n",
-    "from ..fetchers.Finance import AsyncFinanceRealizationList\n",
-    "from ..fetchers.Products import Products\n",
-    "from ..fetchers.SellerRating import SellerRating\n",
-    "from ..fetchers.WareHouses import get_ozon_warehouses"
+    "from OZON.OzonSellerAPI.fetchers.FBS import FBSPostingList\n",
+    "from OZON.OzonSellerAPI.fetchers.FBO import FBOPostingList\n",
+    "from OZON.OzonSellerAPI.fetchers.Finance import AsyncFinanceRealizationList\n",
+    "from OZON.OzonSellerAPI.fetchers.Products import Products\n",
+    "from OZON.OzonSellerAPI.fetchers.SellerRating import SellerRating\n",
+    "from OZON.OzonSellerAPI.fetchers.WareHouses import get_ozon_warehouses"
    ],
    "outputs": [],
    "execution_count": null
