Исправлены ошибки. Подготовка к будущим дополнениям.

--- a/tests/examples.ipynb
+++ b/tests/examples.ipynb
@@ -7,12 +7,12 @@
     "collapsed": true
    },
    "source": [
-    "from OZON.OzonSellerAPI.fetchers.FBS import FBSPostingList\n",
-    "from OZON.OzonSellerAPI.fetchers.FBO import FBOPostingList\n",
-    "from OZON.OzonSellerAPI.fetchers.Finance import AsyncFinanceRealizationList\n",
-    "from OZON.OzonSellerAPI.fetchers.Products import Products\n",
-    "from OZON.OzonSellerAPI.fetchers.SellerRating import SellerRating\n",
-    "from OZON.OzonSellerAPI.fetchers.WareHouses import get_ozon_warehouses"
+    "from OzonSellerAPIPackage.ozon_seller_api.fetchers.FBS import FBSPostingList\n",
+    "from OzonSellerAPIPackage.ozon_seller_api.fetchers.FBO import FBOPostingList\n",
+    "from OzonSellerAPIPackage.ozon_seller_api.fetchers.Finance import AsyncFinanceRealizationList\n",
+    "from OzonSellerAPIPackage.ozon_seller_api.fetchers.Products import Products\n",
+    "from OzonSellerAPIPackage.ozon_seller_api.fetchers.SellerRating import SellerRating\n",
+    "from OzonSellerAPIPackage.ozon_seller_api.fetchers.WareHouses import get_ozon_warehouses"
    ],
    "outputs": [],
    "execution_count": null
